# lulzcasz.dev

./: .dockerignore  .env  .gitignore  Dockerfile  Justfile  LICENSE  README.md  compose.yaml  manage.py  pyproject.toml
blog/: urls.py  views.py
blog/templates/blog/: _category_submenu.html  _post_tags.html  base.html  index.html  post_detail.html  post_list.html  posts_by_category.html  posts_by_section.html
blog/templatetags/: image_utils.py
laboratoriodolyc/: settings.py  urls.py
laboratoriodolyc/settings/: base.py
laboratoriodolyc/static/css/: styles.css
laboratoriodolyc/static/js/: scripts.js
laboratoriodolyc/templates/: base.html
lulzcasz/: celery.py  urls.py
lulzcasz/settings/: base.py  development.py  production.py
lulzcasz/templates/: robots.txt
posts/: admin.py  context_processors.py  models.py  signals.py  sitemaps.py  translation.py
posts/migrations/: 0001_initial.py  0001_squashed_0010_remove_post_products.py  0002_category_description_tutorial_difficulty_and_more.py  0003_remove_tutorial_prerequisites.py  0005_remove_post_categories_post_tags_delete_category.py  0009_remove_post_video.py  0010_remove_post_products.py
posts/tasks/: image.py  video.py
posts/utils/: upload_to.py
products/: admin.py  models.py
products/migrations/: 0002_remove_product_categories_alter_platform_logo_and_more.py
products/tasks/: image.py
products/utils/: upload_to.py
uploads/: admin.py  apps.py  models.py  signals.py  tasks.py
uploads/migrations/: 0001_initial.py
uploads/tasks/: image.py  video.py
uploads/utils/: upload_to.py
(+4 files in other folders)
