[project]
name = "laboratoriodolyc-com-br"
version = "0.8.0"
description = "laboratoriodolyc.com.br source code"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "celery~=5.5",
    "django~=5.2",
    "django-polymorphic~=4.1",
    "django-storages[s3]~=1.14",
    "django-tinymce~=5.0",
    "django-treebeard~=4.7",
    "gunicorn~=23.0",
    "pillow~=12.0",
    "psycopg~=3.2",
    "redis~=7.0",
]

[dependency-groups]
dev = [
    "ipython~=9.7",
    "psycopg[binary]~=3.2",
    "rust-just~=1.43",
]
